fixed overflow mobile msg try 2 with ab-position

--- a/src/css/message-box.css
+++ b/src/css/message-box.css
@@ -96,20 +96,14 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .message-box-outer {
-    max-height: 100vh;
-  }
-
-  .msg-content {
-    min-height: 650px;
-  }
   .message-box-outer{
     max-height: 100vh;
     overflow-y: scroll;
   }
   .msg-content {
-    
     min-height: 70vh;
   }
-  
+  .message-form {
+    position: absolute;
+  }
 }
